# srieps-agent

./: .gitignore  .podmanignore  Containerfile  README.md  Readme.md  boostrap.sh  bootstrap.sh  config.env.template  image-pull-backoff-pod.yaml  robusta-playbooks-config-secret.yaml  robusta-setup.yaml
custom_playbooks/: pyproject.toml
custom_playbooks/custom_actions/: ps-action.py  requirements.txt  sreips-action.py  sreips-ce-action.py  sreips-quota-action.py
docling-mcp/: Containerfile
dummy-agent/: app.py  bootstrap.sh
llamastack/: Dockerfile  all-in-one.yaml  bootstrap.sh  docling-pipeline.py  docling-pipeline_compiled.yaml  docling_rag.ipynb  llamastack-distribution.yaml  llamastack-run-config.yaml  milvus_manifest_standalone.yaml  operators-setup.yaml  requirements.txt
milvus/: bootstrap.sh
minio/: all-in-one.yaml  bootstrap.sh
ocp-mcp/: all-in-one.yaml
rh-kcs-mcp/: Containerfile  all-in-one.yaml  bootstrap.sh  redhat_mcp_server.py  requirements.txt
sreips-agent/: .containerignore  Containerfile  Containerfile.remediation  all-in-one.yaml  bootstarp.sh  remediation-agent.py  requirements.txt  sreips-agent.py
sreips-core/: bootstrap.sh  generated_values.yaml  image-pull-backoff-pod.yaml  sreips-playbooks-config-secret.yaml  sreips-setup.yaml  values.yaml
test-manifests/: 00-create-project.yaml  01-crashloop-pod.yaml  02-imagepull-pod.yaml  03-oom-pod.yaml  04-machineset-redacted.yaml  04-node-issue-workload.yaml  05-pvc-failure.yaml  06-quota-exceeded-pod.yaml
